--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Secret Agent Supply Inc.</title>
   </head>
   <body>
+    <!--First Section-->
     <div class="wholebody">
   <header>
     <div class="topbar">
@@ -19,9 +20,12 @@
    </div>
    </div>
  </header>
+ <!--Second Section-->
 <div class="imgback">
  <div class="holder">
-   
+   <div class="blackbox">
+
+   </div>
  </div>
 </div>
   </body>
