--- a/index.html
+++ b/index.html
@@ -24,9 +24,40 @@
 <div class="imgback">
  <div class="holder">
    <div class="blackbox">
+     <div class="arrival">
+       <p>New Arrival</p>
+     </div>
+     <div class="moto">
+       <p>SPORT BIKES AND MOTORCYCLES</p>
+     </div>
 
    </div>
  </div>
+</div>
+
+<div class="navbar">
+  <div class="words">
+
+  
+<div class="eye">
+  <p>Eyewear</p>
+</div>
+<div class="apperal">
+  <p>Apperal</p>
+</div>
+<div class="gadgets">
+  <p>Gadgets</p>
+</div>
+<div class="veh">
+  <p>Vehicles</p>
+</div>
+<div class="classes">
+  <p>Classes</p>
+</div>
+<div class="contact">
+<p>Contact</p>
+</div>
+  </div>
 </div>
   </body>
 </html>
