--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
   </head>
   <body>
     <!--First Section-->
-    <div class="wholebody">
-  <header>
+    <header>
     <div class="topbar">
     <div class="blackbar">
      <div class="image">
       </div>
      <div class="title">
-      <p>SECRET AGENT SUPPLY INC.</p>
+
      </div>
      </div>
-   </div>
    </div>
  </header>
  <!--Second Section-->
@@ -37,8 +35,6 @@
 
 <div class="navbar">
   <div class="words">
-
-  
 <div class="eye">
   <p>Eyewear</p>
 </div>
@@ -58,6 +54,20 @@
 <p>Contact</p>
 </div>
   </div>
+</div>
+
+<div class="bigcontainer">
+<div class="littlecontainer">
+<div class="box1">
+
+</div>
+<div class="box2">
+
+</div>
+<div class="box3">
+
+</div>
+</div>
 </div>
   </body>
 </html>
