fixed the margin

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="topbar">
     <div class="blackbar">
      <div class="image">
+       <img src="" alt="">
       </div>
      <div class="title">
-
+      <p>SECRET AGENT SUPPLY INC.</p>
      </div>
      </div>
    </div>
