--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div class="topbar">
     <div class="blackbar">
      <div class="image">
-       <img src="" alt="">
       </div>
      <div class="title">
       <p>SECRET AGENT SUPPLY INC.</p>
@@ -60,13 +59,28 @@
 <div class="bigcontainer">
 <div class="littlecontainer">
 <div class="box1">
-
+  <div class="imgin">
+    <img src="./resources/images/pen.png" alt="">
+  </div>
+<div class="wordbox1">
+<p>Exploding Pen</p>
+</div>
 </div>
 <div class="box2">
-
+  <div class="imgin2">
+    <img src="./resources/images/watch.png" alt="">
+  </div>
+<div class="wordbox2">
+<p>Cellular Watch</p>
+</div>
 </div>
 <div class="box3">
-
+  <div class="imgin3">
+    <img src="./resources/images/glasses.png" alt="">
+  </div>
+<div class="wordbox3">
+<p>Thermal Glasses</p>
+</div>
 </div>
 </div>
 </div>
