making more progress

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    </div>
  </div>
 </div>
-
+<!--Third Section-->
 <div class="navbar">
   <div class="words">
 <div class="eye">
@@ -55,7 +55,7 @@
 </div>
   </div>
 </div>
-
+<!--Fourth Section-->
 <div class="bigcontainer">
 <div class="littlecontainer">
 <div class="box1">
@@ -82,6 +82,27 @@
 <p>Thermal Glasses</p>
 </div>
 </div>
+</div>
+</div>
+
+<!--Fifth Section-->
+<div class="stats">
+<div class="statholder">
+<div class="location">
+<p>Location</p>
+<div class="that">
+
+</div>
+</div>
+
+
+<div class="hours">
+<p>Hours</p>
+<div class="them">
+
+</div>
+</div>
+
 </div>
 </div>
   </body>
