--- a/index.html
+++ b/index.html
@@ -105,5 +105,15 @@
 
 
 </div>
+<!--Sixth Section-->
+<footer>
+<div class="ender">
+  <div class="blackend">
+  <div class="endtext">
+ <p>Copyright Secret Agent Supply Inc.</p>
+  </div>
+  </div>
+</div>
+</footer>
   </body>
 </html>
