--- a/index.html
+++ b/index.html
@@ -90,12 +90,18 @@
 <div class="statholder">
 <div class="location">
 <p>Location</p>
+<div id="that">
+<span>-47.346436, 84.32354</span>
+</div>
 </div>
 
 
 <div class="hours">
 <p>Hours</p>
-
+<div id="them">
+  <span>0800-1800</span>
+</div>
+</div>
 
 
 </div>
