--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 <div class="gadgets">
   <p>Gadgets</p>
 </div>
+<div class="menu">
+  <span>Menu</span>
+</div>
 <div class="veh">
   <p>Vehicles</p>
 </div>
