--- a/index.html
+++ b/index.html
@@ -65,26 +65,36 @@
   <div class="imgin">
     <img src="./resources/images/pen.png" alt="">
   </div>
-<div class="wordbox1">
-<p>Exploding Pen</p>
-</div>
+
 </div>
 <div class="box2">
   <div class="imgin2">
     <img src="./resources/images/watch.png" alt="">
   </div>
-<div class="wordbox2">
-<p>Cellular Watch</p>
-</div>
+
 </div>
 <div class="box3">
   <div class="imgin3">
     <img src="./resources/images/glasses.png" alt="">
   </div>
-<div class="wordbox3">
-<p>Thermal Glasses</p>
+
 </div>
 </div>
+</div>
+
+<div class="wordcontainer">
+  <div class="eachword">
+    <div class="wordbox1">
+    <p>Exploding Pen</p>
+    </div>
+
+    <div class="wordbox2">
+    <p>Cellular Watch</p>
+    </div>
+
+    <div class="wordbox3">
+    <p>Thermal Glasses</p>
+  </div>
 </div>
 </div>
 
